--- a/hackathon-app/app/src/main/res/layout/item_chat_user.xml
+++ b/hackathon-app/app/src/main/res/layout/item_chat_user.xml
@@ -7,21 +7,6 @@
     android:layout_marginTop="16dp"
     android:layout_marginRight="8dp">
 
-    <TextView
-        android:id="@+id/text_gchat_date_me"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:paddingStart="8dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="8dp"
-        android:paddingBottom="4dp"
-        android:text="June 10"
-        android:textColor="#C0C0C0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.cardview.widget.CardView
         android:id="@+id/card_gchat_message_me"
         android:layout_width="wrap_content"
@@ -32,7 +17,7 @@
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_gchat_date_me">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:id="@+id/layout_gchat_container_me"
@@ -41,7 +26,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/text_gchat_message_me"
+                android:id="@+id/user_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -57,7 +42,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/text_gchat_timestamp_me"
+        android:id="@+id/user_message_hour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10:00"
