--- a/hackathon-app/app/src/main/res/layout/activity_chat.xml
+++ b/hackathon-app/app/src/main/res/layout/activity_chat.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/backgrownd_chat"
         android:elevation="4dp"
-        android:hint="Add task..."
+        android:hint="Type a message"
         android:maxLines="1"
         android:paddingStart="16dp"
         android:paddingTop="8dp"
@@ -38,5 +38,34 @@
         app:layout_constraintTop_toTopOf="@id/buttonSend"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp" />
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/chat_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent">
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:theme="@style/Widget.AppCompat.Toolbar"
+                app:popupTheme="@style/Theme.AppCompat.Light">
+
+            </androidx.appcompat.widget.Toolbar>
+
+        </com.google.android.material.appbar.AppBarLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_chat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toTopOf="@id/editTextInsertTask"
+            android:layout_marginBottom="75dp"
+            app:layout_constraintTop_toBottomOf="@id/chat_bar"
+            android:layout_marginTop="55dp"
+
+            />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
